# cre-refinancing-distress-warning

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
config/: __init__.py  cap_rates_historical.yaml  loan_generator.yaml  settings.py  stress_scenarios.yaml
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/gold/: loan_current_state.sql  loan_distress_history.sql  market_distress_index.sql  maturity_wall.sql  schema.yml
dbt/models/staging/: sources.yml
docs/analysis/: distress_tier_diagnostics.md  modeling_journey.md  stress_test_results.md
docs/model_risk_management/: 01_model_overview.md  02_data_and_assumptions.md  03_methodology.md  04_performance_and_validation.md  05_limitations_and_conservative_use.md  06_monitoring_plan.md  07_stress_testing_appendix.md
docs/screenshots/: README.md
models/evaluation/: distress_classifier_metrics.json  survival_model_metrics.json
powerbi/: 01_data_model.md  02_dax_measures.md  03_report_pages.md  04_databricks_connection.md  05_reviewer_quickstart.md
powerbi/reports/: README.md
reports/: stress_summary.csv
scripts/: run_dbt.sh  run_gold_models.py  run_pipeline.py
src/: __init__.py
src/explainability/: __init__.py  shap_cli.py  shap_explainer.py
src/exports/: __init__.py  powerbi_exporter.py
src/ingestion/: __init__.py  market_data_fetcher.py  synthetic_loan_generator.py
src/models/: __init__.py  distress_classifier.py  features.py  survival_cli.py  survival_model.py  train_cli.py
src/stress_testing/: __init__.py  aggregate_report.py  scenario_engine.py  stress_cli.py
src/transformations/: __init__.py  data_quality.py  feature_engineering.py  run_silver.py  silver_loans.py  silver_market.py
src/utils/: __init__.py  delta_writer.py  yaml_compat.py
tests/: conftest.py
tests/integration/: test_train_end_to_end.py
tests/unit/: test_delta_writer.py  test_distress_classifier.py  test_market_data_fetcher.py  test_powerbi_exporter.py  test_scenario_engine.py  test_shap_explainer.py  test_silver_transformations.py  test_survival_model.py  test_synthetic_loan_generator.py
