[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cre-distress-warning"
version = "0.1.0"
description = "CRE Refinancing Distress Early-Warning System — medallion-architecture data platform for modeling commercial real estate refinancing risk"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
authors = [
    {name = "CRE Risk Team"},
]

dependencies = [
    # Spark & Delta Lake
    "pyspark>=3.5.0,<3.6.0",
    "delta-spark>=3.2.0,<4.0.0",
    "deltalake>=0.18.0,<1.0.0",

    # Data processing
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pyarrow>=15.0.0,<18.0.0",

    # ML & modeling
    "xgboost>=2.0.0,<3.0.0",
    "lifelines>=0.28.0,<1.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
    "shap>=0.44.0,<1.0.0",
    "optuna>=3.6.0,<4.0.0",

    # Experiment tracking
    "mlflow>=2.12.0,<3.0.0",

    # dbt
    "dbt-core>=1.7.0,<2.0.0",
    "dbt-spark>=1.7.0,<2.0.0",

    # Configuration & utilities
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "requests>=2.31.0,<3.0.0",
    "fredapi>=0.5.2,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.9.0,<2.0.0",
    "pre-commit>=3.7.0,<4.0.0",
    "ipykernel>=6.29.0,<7.0.0",
]

[project.scripts]
cre-pipeline = "scripts.run_pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

# ---------- Ruff ----------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "config", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function call in default argument (pydantic)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pyspark.*",
    "delta.*",
    "deltalake.*",
    "xgboost.*",
    "lifelines.*",
    "shap.*",
    "mlflow.*",
    "optuna.*",
    "fredapi.*",
]
ignore_missing_imports = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (require Spark, Delta Lake)",
    "slow: Tests that take > 30s",
]

# ---------- Coverage ----------
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*", "notebooks/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
